--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xml:lang="en"></html>
     <head>
         <title>Form Example</title>
         <meta charset="UTF-8">
