--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en"></html>
+<head>
+    <title>Parcial 2</title>
+    </head>
     <head>
         <title>Form Example</title>
         <meta charset="UTF-8">
